k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyvault-frontend
  labels:
    app: pyvault-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pyvault-frontend
  template:
    metadata:
      labels:
        app: pyvault-frontend
    spec:
      containers:
        - name: pyvault-frontend
          image: pyvault-frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: pyvault-frontend
spec:
  selector:
    app: pyvault-frontend
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
