k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pyvault-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: pyvault-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pyvault-frontend
                port:
                  number: 3000
